# CppCodeReview

./: CMakeLists.txt  LICENSE  README.md
BasicPlatformerSrc/: collision.hpp  main.cpp  rect.hpp  window.hpp
include/: collision.hpp  constants.hpp  rect.hpp  window.hpp
src/: collision.cpp  main.cpp  rect.cpp  rect.hpp  window.cpp  window.hpp
